--- a/pom.xml
+++ b/pom.xml
@@ -11,5 +11,9 @@
             <version>42.3.6</version>
         </dependency>
     </dependencies>
+    <properties>
+        <maven.compiler.source>19</maven.compiler.source>
+        <maven.compiler.target>19</maven.compiler.target>
+    </properties>
 
 </project>
