--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,13 @@
             <artifactId>postgresql</artifactId>
             <version>42.3.6</version>
         </dependency>
-    </dependencies>
+       <dependency>
+           <groupId>org.junit.jupiter</groupId>
+           <artifactId>junit-jupiter</artifactId>
+           <version>RELEASE</version>
+           <scope>test</scope>
+       </dependency>
+   </dependencies>
     <properties>
         <maven.compiler.source>19</maven.compiler.source>
         <maven.compiler.target>19</maven.compiler.target>
